--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
+    "gmy-img-cropper": "^1.3.0",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
