--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "@dcloudio/uni-quickapp-native": "^2.0.0-31620210325001",
     "@dcloudio/uni-quickapp-webview": "^2.0.0-31620210325001",
     "@dcloudio/uni-stat": "^2.0.0-31620210325001",
-    "@dcloudio/uni-ui": "^1.2.12",
+    "@dcloudio/uni-ui": "^1.4.6",
     "@vue/shared": "^3.0.0",
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "gmy-img-cropper": "^1.3.0",
     "regenerator-runtime": "^0.12.1",
+    "uview-ui": "^1.8.4",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
@@ -86,6 +86,7 @@
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "node-sass": "^5.0.0",
     "postcss-comment": "^2.0.0",
     "sass": "^1.32.11",
     "sass-loader": "^10.1.1",
